--- a/package.json
+++ b/package.json
@@ -48,9 +48,7 @@
     "graphql": "^14.0.2",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.4.0",
-    "pg": "^7.7.1",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^4.42.0",
+    "mongoose": "^5.4.0",
     "winston": "2.4.0"
   }
 }
